--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
 
 server {
     listen 80 default_server;
-    server_name 3.110.104.28;
+    server_name _;
     location = /favicon.ico { access_log off; log_not_found off; }
     location /staticfiles/ {
-        root /home/ubuntu/demo_project;
+        root /home/ubuntu/deploy_project/demo_project;
     }
     location / {
         include proxy_params;
