--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,12 @@
 
 server {
-    listen 80 default_server;
+    listen 80;
     server_name _;
     location = /favicon.ico { access_log off; log_not_found off; }
     location /staticfiles/ {
-        root /home/ubuntu/deploy_project/demo_project;
-    }
+        alias /home/ubuntu/demo_project/staticfiles/;
+}
+
     location / {
         include proxy_params;
         proxy_pass http://unix:/run/gunicorn.sock;
